feat(config,eslint,package): 增加全局config，添加radash，修改eslint以更符合开发习惯，全局格式化代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-  "cSpell.words": ["dprint", "tsdoc"],
+  "cSpell.words": [
+    "dprint",
+    "pnpx",
+    "tsdoc",
+    "unref"
+  ],
   // Enable the ESlint flat config support
   "eslint.experimental.useFlatConfig": true,
 
