--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "lint:viewer": "pnpx eslint-flat-config-viewer",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -23,13 +24,14 @@
     "dayjs": "^1.11.10",
     "numbro": "^2.4.0",
     "pinia": "^2.1.7",
+    "radash": "^12.1.0",
     "tailwindcss": "4.0.0-alpha.9",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.3",
-    "@rushstack/eslint-patch": "^1.7.2",
+    "@antfu/eslint-config": "^2.9.0",
+    "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.30",
@@ -51,14 +53,14 @@
     "prettier-plugin-tailwindcss": "^0.5.12",
     "sass": "^1.72.0",
     "simple-git-hooks": "^2.11.0",
-    "typescript": "~5.4.2",
+    "typescript": "~5.4.3",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-turbo-console": "^1.5.0",
-    "vite": "^5.1.6",
+    "vite": "^5.2.2",
     "vite-plugin-meta-env": "^1.0.2",
-    "vite-plugin-vue-devtools": "^7.0.19",
+    "vite-plugin-vue-devtools": "^7.0.20",
     "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.0.7"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
