--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.0-alpha.10",
+    "@tailwindcss/vite": "4.0.0-alpha.10",
     "dayjs": "^1.11.10",
     "numbro": "^2.4.0",
     "pinia": "^2.1.7",
     "radash": "^12.1.0",
-    "tailwindcss": "^4.0.0-alpha.10",
+    "tailwindcss": "4.0.0-alpha.10",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -52,11 +52,12 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "simple-git-hooks": "^2.11.0",
+    "terser": "^5.29.2",
     "typescript": "~5.4.3",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-turbo-console": "^1.5.0",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.2",
+    "vite": "^5.2.4",
     "vite-plugin-meta-env": "^1.0.2",
     "vite-plugin-vue-devtools": "^7.0.20",
     "vitest": "^1.4.0",
