--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tailwindcss/vite": "4.0.0-alpha.10",
+    "@formkit/auto-animate": "^0.8.1",
     "dayjs": "^1.11.10",
+    "echarts": "^5.5.0",
     "numbro": "^2.4.0",
     "pinia": "^2.1.7",
     "radash": "^12.1.0",
-    "tailwindcss": "4.0.0-alpha.10",
     "vue": "^3.4.21",
+    "vue-echarts": "^6.6.9",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -43,15 +44,19 @@
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.1.2",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
     "simple-git-hooks": "^2.11.0",
+    "tailwindcss": "3.4.1",
     "terser": "^5.29.2",
     "typescript": "~5.4.3",
     "unplugin-auto-import": "^0.17.5",
