--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "numbro": "^2.4.0",
     "pinia": "^2.1.7",
     "radash": "^12.1.0",
+    "tdesign-vue-next": "^1.9.0",
     "vue": "^3.4.21",
     "vue-echarts": "^6.6.9",
     "vue-router": "^4.3.0"
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.9.0",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.30",
@@ -50,11 +52,11 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.0.0",
+    "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.12",
     "simple-git-hooks": "^2.11.0",
     "tailwindcss": "3.4.1",
     "terser": "^5.29.2",
