--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:viewer": "pnpx eslint-flat-config-viewer",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prepare": "husky install",
+    "commit": "cz",
+    "release": "release-it"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
@@ -32,7 +35,9 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.3",
+    "@antfu/eslint-config": "^2.11.4",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@rushstack/eslint-patch": "^1.9.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.4",
@@ -47,16 +52,20 @@
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-vue": "^9.24.0",
+    "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "release-it": "^17.1.1",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "3.4.3",
     "terser": "^5.30.0",
@@ -75,5 +84,20 @@
   },
   "lint-staged": {
     "*": "eslint --fix"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "release-it": {
+    "github": {
+      "release": true
+    }
   }
 }
