chore(package.json): 添加release-it配置

--- a/package.json
+++ b/package.json
@@ -96,6 +96,9 @@
     ]
   },
   "release-it": {
+    "git": {
+      "commitMessage": "chore: release v${version}"
+    },
     "github": {
       "release": true
     }
