--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:fix": "eslint . --fix",
     "lint:viewer": "pnpx eslint-flat-config-viewer",
     "format": "prettier --write src/",
-    "prepare": "husky install",
+    "prepare": "husky",
     "commit": "cz",
     "release": "release-it"
   },
@@ -29,20 +29,23 @@
     "numbro": "^2.4.0",
     "pinia": "^2.1.7",
     "radash": "^12.1.0",
-    "tdesign-vue-next": "^1.9.0",
+    "tdesign-vue-next": "^1.9.3",
     "vue": "^3.4.21",
     "vue-echarts": "^6.6.9",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.4",
+    "@antfu/eslint-config": "^2.11.6",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
-    "@rushstack/eslint-patch": "^1.9.0",
+    "@egoist/tailwindcss-icons": "^1.7.4",
+    "@iconify/json": "^2.2.196",
+    "@iconify/tools": "^4.0.2",
+    "@iconify/utils": "^2.1.22",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.12.2",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -73,7 +76,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-turbo-console": "^1.5.1",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.6",
+    "vite": "^5.2.7",
     "vite-plugin-meta-env": "^1.0.2",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
