--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "echarts": "^5.5.0",
     "numbro": "^2.4.0",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "radash": "^12.1.0",
     "tdesign-vue-next": "^1.9.3",
     "vue": "^3.4.21",
@@ -48,8 +49,6 @@
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
@@ -59,7 +58,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
-    "eslint-plugin-vue": "^9.24.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "less": "^4.2.0",
@@ -70,7 +68,7 @@
     "release-it": "^17.1.1",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "3.4.3",
-    "terser": "^5.30.0",
+    "terser": "^5.30.1",
     "typescript": "~5.4.3",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-turbo-console": "^1.5.1",
