--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@formkit/auto-animate": "^0.8.1",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
-    "numbro": "^2.4.0",
+    "numbro": "^2.5.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "radash": "^12.1.0",
@@ -35,17 +35,17 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.11.6",
+    "@antfu/eslint-config": "^2.12.2",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@egoist/tailwindcss-icons": "^1.7.4",
-    "@iconify/json": "^2.2.196",
-    "@iconify/tools": "^4.0.2",
+    "@iconify/json": "^2.2.197",
+    "@iconify/tools": "^4.0.4",
     "@iconify/utils": "^2.1.22",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.5",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -68,16 +68,17 @@
     "release-it": "^17.1.1",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "3.4.3",
-    "terser": "^5.30.1",
-    "typescript": "~5.4.3",
+    "terser": "^5.30.3",
+    "typescript": "~5.4.4",
     "unplugin-auto-import": "^0.17.5",
-    "unplugin-turbo-console": "^1.5.1",
+    "unplugin-turbo-console": "^1.6.1",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.7",
+    "unplugin-vue-router": "^0.8.5",
+    "vite": "^5.2.8",
     "vite-plugin-meta-env": "^1.0.2",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.7"
+    "vue-tsc": "^2.0.10"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
