--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,9 +12,9 @@
   },
   "include": [
     "env.d.ts",
-    "src/**/*",
+    "src/**/*.ts",
     "src/**/*.vue",
-    "./src/*.d.ts"
+    "src/**/*.d.ts"
   ],
   "exclude": ["src/**/__tests__/*"]
 }
