feat: 添加开发环境https支持，优化开发环境依赖加载

--- a/package.json
+++ b/package.json
@@ -22,32 +22,34 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@formkit/auto-animate": "^0.8.1",
-    "@tanstack/vue-query": "^5.29.0",
-    "@tanstack/vue-query-devtools": "^5.29.0",
+    "@formkit/auto-animate": "^0.8.2",
+    "@tanstack/vue-query": "^5.32.0",
+    "@tanstack/vue-query-devtools": "^5.32.0",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
     "numbro": "^2.5.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "radash": "^12.1.0",
-    "tdesign-vue-next": "^1.9.3",
-    "vue": "^3.4.21",
-    "vue-echarts": "^6.6.9",
-    "vue-router": "^4.3.0"
+    "tdesign-vue-next": "^1.9.4",
+    "vue": "^3.4.25",
+    "vue-echarts": "^6.7.1",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.12.2",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@antfu/eslint-config": "^2.16.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
     "@egoist/tailwindcss-icons": "^1.7.4",
-    "@iconify/json": "^2.2.198",
+    "@iconify/json": "^2.2.204",
     "@iconify/tools": "^4.0.4",
-    "@iconify/utils": "^2.1.22",
+    "@iconify/utils": "^2.1.23",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.7",
     "@vitejs/plugin-legacy": "^5.3.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -58,7 +60,7 @@
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-format": "^0.1.0",
+    "eslint-plugin-format": "^0.1.1",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
@@ -67,20 +69,21 @@
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "release-it": "^17.1.1",
+    "release-it": "^17.2.0",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "3.4.3",
-    "terser": "^5.30.3",
-    "typescript": "~5.4.4",
+    "terser": "^5.30.4",
+    "typescript": "~5.4.5",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-inline-enum": "^0.2.0",
-    "unplugin-turbo-console": "^1.6.1",
+    "unplugin-turbo-console": "^1.8.5",
     "unplugin-vue-components": "^0.26.0",
-    "unplugin-vue-router": "^0.8.5",
-    "vite": "^5.2.8",
-    "vite-plugin-vue-devtools": "^7.0.25",
-    "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.11"
+    "unplugin-vue-router": "^0.8.6",
+    "vite": "^5.2.10",
+    "vite-plugin-mkcert": "^1.17.5",
+    "vite-plugin-vue-devtools": "^7.1.2",
+    "vitest": "^1.5.2",
+    "vue-tsc": "^2.0.14"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
