--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.1.4",
   "private": true,
+  "packageManager": "pnpm@9.1.0",
   "engines": {
     "node": ">=18.12.0"
   },
@@ -22,8 +23,8 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tanstack/vue-query": "^5.34.2",
-    "@tanstack/vue-query-devtools": "^5.34.2",
+    "@tanstack/vue-query": "^5.35.2",
+    "@tanstack/vue-query-devtools": "^5.35.2",
     "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
     "numbro": "^2.5.0",
@@ -31,16 +32,16 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "radash": "^12.1.0",
     "tdesign-vue-next": "^1.9.4",
-    "vue": "^3.4.26",
-    "vue-echarts": "^6.7.1",
+    "vue": "^3.4.27",
+    "vue-echarts": "^6.7.2",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.16.1",
+    "@antfu/eslint-config": "^2.17.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
-    "@egoist/tailwindcss-icons": "^1.7.4",
+    "@egoist/tailwindcss-icons": "^1.8.0",
     "@iconify/json": "^2.2.207",
     "@iconify/tools": "^4.0.4",
     "@iconify/utils": "^2.1.23",
@@ -48,11 +49,11 @@
     "@tanstack/eslint-plugin-query": "^5.32.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.12.8",
-    "@vitejs/plugin-legacy": "^5.3.2",
+    "@types/node": "^20.12.11",
+    "@vitejs/plugin-legacy": "^5.4.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/test-utils": "^2.4.5",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
