--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "type": "module",
   "version": "0.1.4",
   "private": true,
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.1",
   "engines": {
     "node": ">=18.12.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check lint:fix \"build-only {@}\" --",
+    "build": "pnpm type-check && pnpm lint:fix && pnpm build-only && pnpm zip",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -19,7 +19,8 @@
     "lint:viewer": "pnpx eslint-flat-config-viewer",
     "prepare": "husky",
     "commit": "cz",
-    "release": "release-it"
+    "release": "release-it",
+    "zip": "bestzip dist.zip dist"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
@@ -57,6 +58,7 @@
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
+    "bestzip": "^2.2.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
@@ -66,7 +68,6 @@
     "jsdom": "^24.0.0",
     "less": "^4.2.0",
     "lint-staged": "^15.2.2",
-    "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "release-it": "^17.2.1",
