--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
     "@egoist/tailwindcss-icons": "^1.8.0",
-    "@iconify/json": "^2.2.211",
+    "@iconify/json": "^2.2.212",
     "@iconify/tools": "^4.0.4",
     "@iconify/utils": "^2.1.23",
     "@tailwindcss/forms": "^0.5.7",
@@ -63,14 +63,14 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.1",
-    "eslint-plugin-tailwindcss": "^3.15.2",
+    "eslint-plugin-tailwindcss": "^3.16.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "less": "^4.2.0",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.4",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "release-it": "^17.2.1",
+    "release-it": "^17.3.0",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "3.4.3",
     "terser": "^5.31.0",
@@ -79,7 +79,7 @@
     "unplugin-inline-enum": "^0.2.0",
     "unplugin-turbo-console": "^1.8.6",
     "unplugin-vue-components": "^0.27.0",
-    "unplugin-vue-router": "^0.8.6",
+    "unplugin-vue-router": "^0.8.7",
     "vite": "^5.2.11",
     "vite-plugin-mkcert": "^1.17.5",
     "vite-plugin-vue-devtools": "^7.2.1",
@@ -104,7 +104,7 @@
   },
   "release-it": {
     "git": {
-      "commitMessage": "chore: release v${version}"
+      "commitMessage": "chore(release): release v${version}"
     },
     "github": {
       "release": true
