--- a/package.json
+++ b/package.json
@@ -24,32 +24,32 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tanstack/vue-query": "^5.53.2",
-    "@tanstack/vue-query-devtools": "^5.53.2",
+    "@tanstack/vue-query": "^5.54.2",
+    "@tanstack/vue-query-devtools": "^5.54.2",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "numbro": "^2.5.0",
     "pinia": "^2.2.2",
-    "pinia-plugin-persistedstate": "^3.2.3",
+    "pinia-plugin-persistedstate": "^4.0.0",
     "radash": "^12.1.0",
     "tdesign-vue-next": "^1.9.9",
-    "vue": "^3.4.38",
+    "vue": "^3.5.3",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
+    "@antfu/eslint-config": "^3.3.2",
     "@commitlint/cli": "^19.4.1",
     "@commitlint/config-conventional": "^19.4.1",
     "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
     "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify/json": "^2.2.243",
+    "@iconify/json": "^2.2.245",
     "@iconify/tools": "^4.0.6",
     "@iconify/utils": "^2.1.32",
     "@tanstack/eslint-plugin-query": "^5.53.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.4",
     "@vitejs/plugin-legacy": "^5.4.2",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
@@ -67,10 +67,11 @@
     "jsdom": "^25.0.0",
     "less": "^4.2.0",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.43",
+    "postcss": "^8.4.45",
     "prettier": "^3.3.3",
     "release-it": "^17.6.0",
     "simple-git-hooks": "^2.11.1",
+    "svgo": "^3.3.2",
     "tailwindcss": "3.4.10",
     "terser": "^5.31.6",
     "typescript": "~5.5.4",
@@ -79,11 +80,11 @@
     "unplugin-turbo-console": "^1.10.1",
     "unplugin-vue-components": "^0.27.4",
     "unplugin-vue-router": "^0.10.7",
-    "vite": "^5.4.2",
+    "vite": "^5.4.3",
     "vite-plugin-mkcert": "^1.17.6",
-    "vite-plugin-vue-devtools": "^7.3.9",
+    "vite-plugin-vue-devtools": "^7.4.4",
     "vitest": "^2.0.5",
-    "vue-tsc": "^2.1.4"
+    "vue-tsc": "^2.1.6"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
