--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tanstack/vue-query": "^5.59.1",
-    "@tanstack/vue-query-devtools": "^5.59.1",
+    "@tanstack/vue-query": "^5.59.13",
+    "@tanstack/vue-query-devtools": "^5.59.13",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "numbro": "^2.5.0",
@@ -33,7 +33,7 @@
     "pinia-plugin-persistedstate": "^4.1.1",
     "radash": "^12.1.0",
     "tdesign-vue-next": "^1.10.2",
-    "vue": "^3.5.11",
+    "vue": "^3.5.12",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.5"
   },
@@ -43,10 +43,10 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
     "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify/json": "^2.2.257",
+    "@iconify/json": "^2.2.260",
     "@iconify/tools": "^4.0.7",
     "@iconify/utils": "^2.1.33",
-    "@tanstack/eslint-plugin-query": "^5.59.1",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.7.5",
@@ -62,28 +62,28 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.12.0",
     "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "husky": "^9.1.6",
     "jsdom": "^25.0.1",
     "less": "^4.2.0",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "release-it": "^17.7.0",
+    "release-it": "^17.9.0",
     "simple-git-hooks": "^2.11.1",
     "svgo": "^3.3.2",
-    "tailwindcss": "3.4.13",
+    "tailwindcss": "^3.4.14",
     "terser": "^5.34.1",
-    "typescript": "~5.6.2",
+    "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.3",
     "unplugin-inline-enum": "^0.2.0",
     "unplugin-turbo-console": "^1.10.4",
     "unplugin-vue-components": "^0.27.4",
     "unplugin-vue-router": "^0.10.8",
-    "vite": "^5.4.8",
+    "vite": "^5.4.9",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-vue-devtools": "^7.4.6",
-    "vitest": "^2.1.2",
+    "vitest": "^2.1.3",
     "vue-tsc": "^2.1.6"
   },
   "simple-git-hooks": {
