--- a/package.json
+++ b/package.json
@@ -24,67 +24,68 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tanstack/vue-query": "^5.62.1",
-    "@tanstack/vue-query-devtools": "^5.62.1",
+    "@tailwindcss/vite": "^4.0.7",
+    "@tanstack/vue-query": "^5.66.4",
+    "@tanstack/vue-query-devtools": "^5.66.4",
     "dayjs": "^1.11.13",
-    "echarts": "^5.5.1",
+    "echarts": "^5.6.0",
     "numbro": "^2.5.0",
-    "pinia": "^2.2.8",
-    "pinia-plugin-persistedstate": "^4.1.3",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "radash": "^12.1.0",
-    "tdesign-vue-next": "^1.10.4",
+    "tdesign-vue-next": "^1.10.7",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
+    "@antfu/eslint-config": "^4.3.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
-    "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify/json": "^2.2.278",
-    "@iconify/tools": "^4.0.7",
-    "@iconify/utils": "^2.1.33",
-    "@tanstack/eslint-plugin-query": "^5.62.1",
+    "@egoist/tailwindcss-icons": "^1.9.0",
+    "@iconify/json": "^2.2.308",
+    "@iconify/tools": "^4.1.1",
+    "@iconify/utils": "^2.3.0",
+    "@tanstack/eslint-plugin-query": "^5.66.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.10.1",
-    "@vitejs/plugin-legacy": "^6.0.0",
+    "@types/node": "^22.13.4",
+    "@vitejs/plugin-legacy": "^6.0.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^12.0.0",
+    "@vueuse/core": "^12.7.0",
     "autoprefixer": "^10.4.20",
     "bestzip": "^2.2.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.16.0",
-    "eslint-plugin-format": "^0.1.3",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint": "^9.20.1",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "husky": "^9.1.7",
-    "jsdom": "^25.0.1",
-    "less": "^4.2.1",
-    "lint-staged": "^15.2.10",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
-    "release-it": "^17.10.0",
+    "jsdom": "^26.0.0",
+    "less": "^4.2.2",
+    "lint-staged": "^15.4.3",
+    "postcss": "^8.5.2",
+    "prettier": "^3.5.1",
+    "release-it": "^18.1.2",
     "simple-git-hooks": "^2.11.1",
     "svgo": "^3.3.2",
-    "tailwindcss": "^3.4.15",
-    "terser": "^5.36.0",
-    "typescript": "~5.6.3",
-    "unplugin-auto-import": "^0.18.6",
-    "unplugin-inline-enum": "^0.2.0",
-    "unplugin-turbo-console": "^1.10.6",
-    "unplugin-vue-components": "^0.27.5",
-    "unplugin-vue-router": "^0.10.8",
-    "vite": "^6.0.2",
+    "tailwindcss": "^4.0.7",
+    "terser": "^5.39.0",
+    "typescript": "~5.7.3",
+    "unplugin-auto-import": "^19.1.0",
+    "unplugin-inline-enum": "^0.3.0",
+    "unplugin-turbo-console": "^1.11.2",
+    "unplugin-vue-components": "^28.2.0",
+    "unplugin-vue-router": "^0.11.2",
+    "vite": "^6.1.0",
     "vite-plugin-mkcert": "^1.17.6",
-    "vite-plugin-vue-devtools": "^7.6.7",
-    "vitest": "^2.1.8",
-    "vue-tsc": "^2.1.10"
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vitest": "^3.0.6",
+    "vue-tsc": "^2.2.2"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
