--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tailwindcss/vite": "^4.0.8",
+    "@tailwindcss/vite": "^4.0.9",
     "@tanstack/vue-query": "^5.66.9",
     "@tanstack/vue-query-devtools": "^5.66.9",
     "dayjs": "^1.11.13",
@@ -48,10 +48,10 @@
     "@iconify/tools": "^4.1.1",
     "@iconify/utils": "^2.3.0",
     "@tanstack/eslint-plugin-query": "^5.66.1",
-    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.5",
-    "@vitejs/plugin-legacy": "^6.0.1",
+    "@vitejs/plugin-legacy": "^6.0.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/test-utils": "^2.4.6",
@@ -73,15 +73,16 @@
     "release-it": "^18.1.2",
     "simple-git-hooks": "^2.11.1",
     "svgo": "^3.3.2",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.0.9",
     "terser": "^5.39.0",
     "typescript": "~5.7.3",
     "unplugin-auto-import": "^19.1.0",
+    "unplugin-fonts": "^1.3.1",
     "unplugin-inline-enum": "^0.3.0",
     "unplugin-turbo-console": "^1.11.3",
     "unplugin-vue-components": "^28.4.0",
     "unplugin-vue-router": "^0.11.2",
-    "vite": "^6.1.1",
+    "vite": "^6.2.0",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.7",
