feat(font): 添加自定义字体支持并优化字体处理，更新 tailwind 配置
- 在 .vscode/settings.json 中添加新字体
- 在 HelloWorld.vue 中应用新字体样式
- 在 main.ts 中引入 unfonts.css
- 更新 main.css，添加 Vue 相关颜色变量
- 新增字体处理相关工具函数
- 修改 tailwind.config.ts，支持自定义字体
- 更新 tsconfig.app.json 和 tsconfig.node.json
- 在 vite.config.ts 中配置 Unfonts 插件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "cSpell.words": [
     "cpsoinos",
     "dprint",
+    "jinbuti",
     "pnpx",
     "tdesign",
     "tsdoc",
+    "Unfonts",
     "unformat",
     "unref",
     "vuejs"
