--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["unplugin-vue-router/client"],
+    "types": ["unplugin-vue-router/client", "unplugin-fonts/client"],
     "strict": true
   },
   "include": [
