build(deps): 更新项目依赖版本
- 更新 @tailwindcss/vite、@tanstack/vue-query 等依赖至最新版本
- 新增 @iconify/types 依赖
- 更新 ESLint、Vitest 等开发依赖至最新版本

--- a/package.json
+++ b/package.json
@@ -24,44 +24,45 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
-    "@tailwindcss/vite": "^4.0.10",
-    "@tanstack/vue-query": "^5.67.1",
-    "@tanstack/vue-query-devtools": "^5.67.1",
+    "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/vue-query": "^5.67.2",
+    "@tanstack/vue-query-devtools": "^5.67.2",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "numbro": "^2.5.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "radash": "^12.1.0",
-    "tdesign-vue-next": "^1.10.7",
+    "tdesign-vue-next": "1.10.7",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.5.1",
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
+    "@antfu/eslint-config": "^4.8.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@cpsoinos/vite-plugin-http2-proxy": "^0.1.0",
     "@egoist/tailwindcss-icons": "^1.9.0",
-    "@iconify/json": "^2.2.313",
+    "@iconify/json": "^2.2.315",
     "@iconify/tools": "^4.1.1",
+    "@iconify/types": "^2.0.0",
     "@iconify/utils": "^2.3.0",
-    "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@tanstack/eslint-plugin-query": "^5.67.2",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "@vitejs/plugin-legacy": "^6.0.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^12.8.2",
-    "autoprefixer": "^10.4.20",
+    "@vueuse/core": "^13.0.0",
+    "autoprefixer": "^10.4.21",
     "bestzip": "^2.2.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-format": "^1.0.1",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "husky": "^9.1.7",
@@ -73,7 +74,7 @@
     "release-it": "^18.1.2",
     "simple-git-hooks": "^2.11.1",
     "svgo": "^3.3.2",
-    "tailwindcss": "^4.0.10",
+    "tailwindcss": "^4.0.12",
     "terser": "^5.39.0",
     "typescript": "~5.8.2",
     "unplugin-auto-import": "^19.1.1",
@@ -82,10 +83,10 @@
     "unplugin-turbo-console": "^1.11.3",
     "unplugin-vue-components": "^28.4.1",
     "unplugin-vue-router": "^0.12.0",
-    "vite": "^6.2.0",
+    "vite": "^6.2.1",
     "vite-plugin-mkcert": "^1.17.7",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "vitest": "^3.0.7",
+    "vitest": "^3.0.8",
     "vue-tsc": "^2.2.8"
   },
   "simple-git-hooks": {
